feat: add /User routes
