# backend/docs/swagger.json
@@ -100,6 +100,23 @@
                     }
                 }
             }
+        },
+        "/api/user/temp": {
+            "get": {
+                "description": "test REST on User",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Temporary Handler",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
         }
     },
     "definitions": {
