# backend/internal/user/routes.go
@@ -1,0 +1,9 @@
+package user
+
+import (
+	"github.com/gin-gonic/gin"
+)
+
+func Routes(r *gin.RouterGroup) {
+	r.GET("/temp", Temp)
+}
